--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,14 +1,10 @@
 {
-    // Use o IntelliSense para saber mais sobre os atributos possíveis.
-    // Focalizar para exibir as descrições dos atributos existentes.
-    // Para obter mais informações, acesse: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
     "configurations": [
         {
-            "type": "chrome",
+            "type": "pwa-chrome",
+            "name": "http://127.0.0.1:5500/aula02/mesatrabalho/index.html",
             "request": "launch",
-            "name": "Open index.html",
-            "file": "c:\\Users\\gusta\\OneDrive\\Área de Trabalho\\DH\\Front2\\aula02\\mesatrabalho\\index.html"
+            "url": "http://127.0.0.1:5500/aula02/mesatrabalho/index.html"
         }
     ]
 }
